--- a/web/index.html
+++ b/web/index.html
@@ -55,6 +55,9 @@
       });
     });
   </script>
+  <script type="text/javascript">
+    window.flutterWebRenderer = "html";
+</script>
   <script type="module">
     // Import the functions you need from the SDKs you need
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
@@ -78,5 +81,6 @@
     const app = initializeApp(firebaseConfig);
     const analytics = getAnalytics(app);
   </script>
+
 </body>
 </html>
